i18n lang change fix

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -63,6 +63,8 @@ label.client.header.cs=Čeština
 label.client.header.en=Angličtina
 label.client.header.langtitle=Změnit jazyk
 label.client.cypherdetail.solved=Zadali jste správné heslo. Šifra byla vyluštěna!
+label.error.gameended=Hra již byla ukončena
+label.error.badsolution=Špatné řešení, zkuste se víc zamyslet :-)
 
 
 
