--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -63,5 +63,7 @@ label.client.header.cs=Czech
 label.client.header.en=English
 label.client.header.langtitle=Change language
 label.client.cypherdetail.solved=You have entered the right codeword! The cypher is solved!
+label.error.gameended=The game has already ended
+label.error.badsolution=Bad solution, think harder! :D
 
 
