i18n for organizer statistics, organizer header; fix logout i18n

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -65,6 +65,27 @@ label.client.header.langtitle=Změnit jazyk
 label.client.cypherdetail.solved=Zadali jste správné heslo. Šifra byla vyluštěna!
 label.error.gameended=Hra již byla ukončena
 label.error.badsolution=Špatné řešení, zkuste se víc zamyslet :-)
-
-
-
+label.organizer.statistics.cyphers.sortbysolved=Šifry dle počtu vyřešení
+label.organizer.statistics.cyphers.sortbyskipped=Šifry dle počtu přeskočení
+label.organizer.statistics.cyphers.sortbyhintstaken=Šifry dle použitých nápověd
+label.organizer.statistics.cyphers.sortbyhintstakenvalue=Šifry dle bodů za užité nápovědy
+label.organizer.statistics.teams.sortbysolved=Týmy dle počtu vyřešených šifer
+label.organizer.statistics.teams.sortbyskipped=Týmy dle počtu přeskočených šifer
+label.organizer.statistics.teams.sortbyhintstaken=Týmy dle počtu použitých nápověd
+label.organizer.statistics.teams.sortbyhintstakenvalue=Týmy dle bodů za použité nápovědy
+label.organizer.statistics.teamstatsheader=Statistiky týmů
+label.organizer.statistics.cypherstatsheader=Statistiky šifer
+label.organizer.header.puzzlehuntorganizer=Luštěniny | Organizátor
+label.organizer.header.cyphersoverview=Přehled šifer
+label.organizer.header.teamsoverview=Přehled týmů
+label.organizer.header.score=Skóre
+label.organizer.header.statistics=Statistiky
+label.organizer.header.logout=Odhlásit se
+label.organizer.header.logoutconfirm=Opravdu se chcete odhlásit?
+label.organizer.header.cs=Čeština
+label.organizer.header.en=Angličtina
+label.organizer.header.langtitle=Změnit jazyk
+label.organizer.statistics.sortedbyhintstaken=Seřazeno podle počtu použitých nápověd
+label.organizer.statistics.sortedbyhintstakenvalue=Seřazeno podle počtu bodů za použité nápovědy
+label.organizer.statistics.sortedbyskippedcount=Seřazeno podle počtu přeskočení
+label.organizer.statistics.sortedbysolvedcount=Seřazeno podle počtu úspěšného vyřešení
