--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -65,5 +65,27 @@ label.client.header.langtitle=Change language
 label.client.cypherdetail.solved=You have entered the right codeword! The cypher is solved!
 label.error.gameended=The game has already ended
 label.error.badsolution=Bad solution, think harder! :D
-
-
+label.organizer.statistics.cyphers.sortbysolved=Cyphers by solved count
+label.organizer.statistics.cyphers.sortbyskipped=Cyphers by skipped count
+label.organizer.statistics.cyphers.sortbyhintstaken=Cyphers by hints taken
+label.organizer.statistics.cyphers.sortbyhintstakenvalue=Cyphers by hints taken value
+label.organizer.statistics.teams.sortbyskipped=Teams by cyphers skipped count
+label.organizer.statistics.teams.sortbysolved=Teams by cyphers solved count
+label.organizer.statistics.teams.sortbyhintstaken=Teams by hints taken
+label.organizer.statistics.teams.sortbyhintstakenvalue=Teams by hints taken value
+label.organizer.statistics.teamstatsheader=Team statistics
+label.organizer.statistics.cypherstatsheader=Cypher statistics
+label.organizer.header.puzzlehuntorganizer=Puzzlehunt | Organizer
+label.organizer.header.cyphersoverview=Cyphers overview
+label.organizer.header.teamsoverview=Teams overview
+label.organizer.header.score=Score
+label.organizer.header.statistics=Statistics
+label.organizer.header.logout=Log out
+label.organizer.header.logoutconfirm=Are you sure you want to log out?
+label.organizer.header.cs=Czech
+label.organizer.header.en=English
+label.organizer.header.langtitle=Change language
+label.organizer.statistics.sortedbyhintstaken=Sorted by the number of hints taken
+label.organizer.statistics.sortedbyhintstakenvalue=Sorted by the value of hints taken
+label.organizer.statistics.sortedbyskippedcount=Sorted by cypher skipped count
+label.organizer.statistics.sortedbysolvedcount=Sorted by cypher solved count
