add organizer score i18n

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -76,3 +76,12 @@ label.contact=Kontakt
 label.contact.links=Odkazy
 label.cyphers=Šifry
 label.hint=Nápověda
+label.pdfexport=Export do PDF
+label.organizer.teamrankingbyscore=Pořadí týmů podle skóre
+label.rank=Pořadí
+label.name=Název
+label.points=Body
+label.noteamsinsystem=V systému nejsou týmy
+label.pdfexport.finalscore=Výsledné skóre
+label.teamname=Název týmu
+label.pdfexport.rank=Poradi
