--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -76,3 +76,12 @@ label.contact=Contact
 label.contact.links=Links
 label.cyphers=Cyphers
 label.hint=Hint
+label.pdfexport=Export to PDF
+label.organizer.teamrankingbyscore=Team rank
+label.rank=Rank
+label.name=Name
+label.points=Points
+label.noteamsinsystem=There are no teams in the system
+label.pdfexport.finalscore=Final score
+label.teamname=Team name
+label.pdfexport.rank=Rank
