add i18n to score/team

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -85,3 +85,12 @@ label.noteamsinsystem=There are no teams in the system
 label.pdfexport.finalscore=Final score
 label.teamname=Team name
 label.pdfexport.rank=Rank
+label.team=Team
+label.overview=Ovreview
+label.cyphername=Cypher name
+label.totalscore=Total score
+label.hintstakenpoints=Hints taken - subtracted points
+label.idofhintstaken=Hints taken Id
+label.hintstaken=Hints taken overall
+label.pointsforcypher=Points for cypher
+label.backtotheteamlist=Back to the team list
