--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -85,3 +85,13 @@ label.noteamsinsystem=V systému nejsou týmy
 label.pdfexport.finalscore=Výsledné skóre
 label.teamname=Název týmu
 label.pdfexport.rank=Poradi
+label.team=Tým
+label.overview=Přehled
+label.cyphername=Název šifry
+label.totalscore=Celkové skóre
+label.hintstakenpoints=Strhnuté body za nápovědy
+label.idofhintstaken=Id použitých nápověd
+label.hintstaken=Použitých nápověd
+label.pointsforcypher=Body za šifru
+label.backtotheteamlist=Zpět na seznam týmů
+
