--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -35,7 +35,7 @@ label.client.finalplace.address=Address
 label.client.finalplace.showonmap=Show on map
 label.client.hintlist.cyphernotactive=Cypher is not active.
 label.client.hintlist.gameended=The game has ended.
-label.client.hintlist.unlockedhints=Unlucked hints
+label.client.hintlist.unlockedhints=Unlocked hints
 label.client.hintlist.hintimage=Hint image
 label.client.hintlist.notakenhints=You have not unlocked any hints yet.
 label.client.hintlist.lockedhints=Locked hints
