[Text] Localization of admin/organizers section

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -95,3 +95,25 @@ label.hintstaken=Použitých nápověd
 label.pointsforcypher=Body za šifru
 label.backtotheteamlist=Zpět na seznam týmů
 
+# Shared
+label.id=ID
+label.actions=Akce
+label.new=Přidat
+label.delete=Smazat
+label.edit=Upravit
+label.save=Uložit
+label.password=Heslo
+
+# Admin - Organizers
+admin.organizers.page-title=Organizátoři
+admin.organizers.common.assigned-cyphers=Přiřazené šifry
+admin.organizers.common.name=Jméno
+
+admin.organizers.list.header=Organizátoři
+admin.organizers.list.msg-empty=V systému nejsou organizátoři
+
+admin.organizers.form.assign-new-cyphers=Přiřadit další šifry
+admin.organizers.form.no-cyphers=Bez šifry
+admin.organizers.form.no-cyphers-assigned=Organizátor nemá přiřazeny žádné šifry.
+admin.organizers.form.edit-organizer=Upravit organizátora
+admin.organizers.form.add-organizer=Nový organizátor
