--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -94,3 +94,26 @@ label.idofhintstaken=Hints taken Id
 label.hintstaken=Hints taken overall
 label.pointsforcypher=Points for cypher
 label.backtotheteamlist=Back to the team list
+
+# Shared
+label.id=ID
+label.actions=Actions
+label.new=New
+label.delete=Delete
+label.edit=Edit
+label.save=Save
+label.password=Password
+
+# Admin - Organizers
+admin.organizers.page-title=Organizers
+admin.organizers.common.assigned-cyphers=Assigned cyphers
+admin.organizers.common.name=Name
+
+admin.organizers.list.header=Organizers
+admin.organizers.list.msg-empty=There are no organizers in the system
+
+admin.organizers.form.assign-new-cyphers=Assign new cyphers
+admin.organizers.form.no-cyphers=No cyphers
+admin.organizers.form.no-cyphers-assigned=Organizer has no cyphers assigned.
+admin.organizers.form.edit-organizer=Edit organizer
+admin.organizers.form.add-organizer=New organizer
