[Text] Localization of admin/cyphers section

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -102,6 +102,8 @@ label.new=New
 label.delete=Delete
 label.edit=Edit
 label.save=Save
+label.detail=Detail
+label.map=Map
 label.password=Password
 
 # Admin - Organizers
@@ -117,3 +119,24 @@ admin.organizers.form.no-cyphers=No cyphers
 admin.organizers.form.no-cyphers-assigned=Organizer has no cyphers assigned.
 admin.organizers.form.edit-organizer=Edit organizer
 admin.organizers.form.add-organizer=New organizer
+
+# Admin - cyphers
+admin.cyphers.page-title=Cyphers
+admin.cyphers.common.order=Order
+admin.cyphers.common.coordinates=Coordinates
+admin.cyphers.common.description=Place description
+admin.cyphers.common.answer=Answer
+admin.cyphers.common.easter-egg-answer=Easter egg answer
+admin.cyphers.common.bonus-info=Bonus info
+admin.cyphers.common.organizer=Organizer
+admin.cyphers.common.name=Name
+
+admin.cyphers.list.header=Cyphers
+admin.cyphers.list.msg-empty=There are no cyphers
+
+admin.cyphers.form.edit-cypher=Edit cypher
+admin.cyphers.form.add-cypher=New cypher
+admin.cyphers.form.map-address=Map address
+admin.cyphers.form.assigned-organizer=Assigned organizer
+admin.cyphers.form.no-organizers=No organizer
+admin.cyphers.form.map-subinfo=Click into the map to set coordinates.
