pridano overeni, ze jde zahajit hru jen kdyz jsou nastaveny sifry a finalplace

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -21,6 +21,7 @@ label.client.cypherdetail.solution=Řešení
 label.client.cypherdetail.verify=Ověřit
 label.client.cypherdetail.finalplacedetail=Detail vyhlášení výsledků
 label.client.cypherdetail.skipped=Tuto šifru jste přeskočili
+label.client.cypherdetail.gamenotready=Hru ještě není možné zahájit. Vyčkejte na pokyny pořadatelů.
 label.client.cypherdetail.wherenow=Kam dál?
 label.client.cypherdetail.nextcypher=Zobrazit další šifru
 label.client.cypherdetail.bonusinfo=Bonusové informace
