--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -21,6 +21,7 @@ label.client.cypherdetail.solution=Solution
 label.client.cypherdetail.verify=Verify
 label.client.cypherdetail.finalplacedetail=Results announcement detail
 label.client.cypherdetail.skipped=You have skipped this cypher
+label.client.cypherdetail.gamenotready=Game is not ready. Wait for the instructions.
 label.client.cypherdetail.wherenow=Where now?
 label.client.cypherdetail.nextcypher=Go to the next cypher
 label.client.cypherdetail.bonusinfo=Bonus information
