[Text] Translations for admin teams page

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -117,3 +117,13 @@ admin.organizers.form.no-cyphers=Bez šifry
 admin.organizers.form.no-cyphers-assigned=Organizátor nemá přiřazeny žádné šifry.
 admin.organizers.form.edit-organizer=Upravit organizátora
 admin.organizers.form.add-organizer=Nový organizátor
+
+# Admin - teams
+admin.teams.page-title=Týmy
+admin.teams.common.team-name=Jméno týmu
+admin.teams.common.num-of-members=Počet členů
+admin.teams.common.pin=PIN
+
+admin.teams.main.header=Tým
+admin.teams.main.msg-empty=V systému nejsou žádné týmy
+admin.teams.main.new=Nový
