--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -117,3 +117,13 @@ admin.organizers.form.no-cyphers=No cyphers
 admin.organizers.form.no-cyphers-assigned=Organizer has no cyphers assigned.
 admin.organizers.form.edit-organizer=Edit organizer
 admin.organizers.form.add-organizer=New organizer
+
+# Admin - teams
+admin.teams.page-title=Teams
+admin.teams.common.team-name=Team name
+admin.teams.common.num-of-members=Number of members
+admin.teams.common.pin=PIN
+
+admin.teams.main.header=Team
+admin.teams.main.msg-empty=There are no teams in the system
+admin.teams.main.new=New
