[Text] Localization of admin/final place section

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -117,3 +117,14 @@ admin.organizers.form.no-cyphers=Bez šifry
 admin.organizers.form.no-cyphers-assigned=Organizátor nemá přiřazeny žádné šifry.
 admin.organizers.form.edit-organizer=Upravit organizátora
 admin.organizers.form.add-organizer=Nový organizátor
+
+# Admin - Final place management
+admin.finalplace.page-title=Místo vyhlášení
+
+admin.finalplace.form.server-time=Čas na serveru
+admin.finalplace.form.description=Jméno a popis
+admin.finalplace.form.coordinates=Souřadnice
+admin.finalplace.form.coordinates-hint=Kliknutím do mapy nastavíte souřadnice.
+admin.finalplace.form.finish-time=Čas ukončení
+admin.finalplace.form.announcement-time=Čas vyhlášení výsledků
+admin.finalplace.form.access-time=Zpřístupnění místa vyhlášení před časem ukončení (minuty)
