--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -117,3 +117,14 @@ admin.organizers.form.no-cyphers=No cyphers
 admin.organizers.form.no-cyphers-assigned=Organizer has no cyphers assigned.
 admin.organizers.form.edit-organizer=Edit organizer
 admin.organizers.form.add-organizer=New organizer
+
+# Admin - Final place management
+admin.finalplace.page-title=Final place
+
+admin.finalplace.form.server-time=Server time
+admin.finalplace.form.description=Name and description
+admin.finalplace.form.coordinates=Coordinates
+admin.finalplace.form.coordinates-hint=Click into the map to set coordinates.
+admin.finalplace.form.finish-time=Finish time
+admin.finalplace.form.announcement-time=Results announcement time
+admin.finalplace.form.access-time=Final place is accessible before finish time (minutes)
