vylepseni FE pro statistiky

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -49,10 +49,12 @@ label.client.hintlist.pointshigh=bodů
 label.client.cypherdetail.solved=Zadali jste správné heslo. Šifra byla vyluštěna!
 label.error.gameended=Hra již byla ukončena
 label.error.badsolution=Špatné řešení, zkuste se víc zamyslet :-)
+label.organizer.statistics.cyphers.header=Statistiky šifer
 label.organizer.statistics.cyphers.sortbysolved=Šifry dle počtu vyřešení
 label.organizer.statistics.cyphers.sortbyskipped=Šifry dle počtu přeskočení
 label.organizer.statistics.cyphers.sortbyhintstaken=Šifry dle použitých nápověd
 label.organizer.statistics.cyphers.sortbyhintstakenvalue=Šifry dle bodů za užité nápovědy
+label.organizer.statistics.teams.header=Statistiky týmů
 label.organizer.statistics.teams.sortbysolved=Týmy dle počtu vyřešených šifer
 label.organizer.statistics.teams.sortbyskipped=Týmy dle počtu přeskočených šifer
 label.organizer.statistics.teams.sortbyhintstaken=Týmy dle počtu použitých nápověd
