--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -49,10 +49,12 @@ label.client.hintlist.pointshigh=points
 label.client.cypherdetail.solved=You have entered the right codeword! The cypher is solved!
 label.error.gameended=The game has already ended
 label.error.badsolution=Bad solution, think harder! :D
+label.organizer.statistics.cyphers.header=Cyphers statistics
 label.organizer.statistics.cyphers.sortbysolved=Cyphers by solved count
 label.organizer.statistics.cyphers.sortbyskipped=Cyphers by skipped count
 label.organizer.statistics.cyphers.sortbyhintstaken=Cyphers by hints taken
 label.organizer.statistics.cyphers.sortbyhintstakenvalue=Cyphers by hints taken value
+label.organizer.statistics.teams.header=Teams statistics
 label.organizer.statistics.teams.sortbyskipped=Teams by cyphers skipped count
 label.organizer.statistics.teams.sortbysolved=Teams by cyphers solved count
 label.organizer.statistics.teams.sortbyhintstaken=Teams by hints taken
